# antigravity-online-interview-fastapi-docker-hw2

./: .dockerignore  AGENTS.md  Dockerfile  PROJECT-FLOW.md  README.md  docker-compose.yml  openapi.json  render.yaml
backend/: export_openapi.py  main.py  manual_test.py  pyproject.toml  pytest_error.txt  room_manager.py  run_tests.py  test_output.txt
backend/tests/: conftest.py  test_integration.py  test_simple.py
frontend/static/js/: app.js
frontend/templates/: index.html
