[project]
name = "coding-interview-backend"
version = "0.1.0"
description = "Backend for the coding interview platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
]
